@@ -72,6 +72,7 @@
  * #1078 (KrigingAlgorithm documentation still references "inputTransformation")
  * #1090 (PythonFunction can make OT crash)
  * #1092 (The parameterGradient of a ParametricFunction can loss accuracy)
+ * #1099 (PythonDistribution does not work with ConditionalDistribution)
 
 == 1.12 release (2018-11-08) == #release-1.12
 
